--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="design\style13.css">
     <link rel="stylesheet" href="design\about_us.css">
     <link rel = "stylesheet" href="design\mediaqueryfooter.css">
+    <link rel = "stylesheet" href="design\mediaqueryheader.css">
 </head>
 
 <body>
